Fix for overflowing images issue in Photoblog
https://github.com/jsnarvasa/jsnarvasa.com/issues/5

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -148,7 +148,7 @@ p#intro-text {
 }
 
 #image-on-overlay{
-    max-height:100%;
+    max-height:inherit;
     max-width:100%;
 }
 
